0.4.18/_sources/gallery/add_points_with_text.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_points_with_text.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_add_points_with_text.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_points_with_text.py:


Add points with text
====================

Display a points layer on top of an image layer using the ``add_points`` and
``add_image`` APIs

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 10-57



.. image-sg:: /gallery/images/sphx_glr_add_points_with_text_001.png
   :alt: add points with text
   :srcset: /gallery/images/sphx_glr_add_points_with_text_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    import numpy as np

    import napari

    # add the image
    viewer = napari.view_image(np.zeros((400, 400)))
    # add the points
    points = np.array([[100, 100], [200, 300], [333, 111]])

    # create features for each point
    features = {
        'confidence': np.array([1, 0.5, 0]),
        'good_point': np.array([True, False, False]),
    }

    # define the color cycle for the face_color annotation
    face_color_cycle = ['blue', 'green']

    text = {
        'string': 'Confidence is {confidence:.2f}',
        'size': 20,
        'color': 'green',
        'translation': np.array([-30, 0]),
    }

    # create a points layer where the face_color is set by the good_point feature
    # and the edge_color is set via a color map (grayscale) on the confidence
    # feature.
    points_layer = viewer.add_points(
        points,
        features=features,
        text=text,
        size=20,
        edge_width=7,
        edge_width_is_relative=False,
        edge_color='confidence',
        edge_colormap='gray',
        face_color='good_point',
        face_color_cycle=face_color_cycle,
    )

    # set the edge_color mode to colormap
    points_layer.edge_color_mode = 'colormap'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_points_with_text.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_points_with_text.py <add_points_with_text.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_points_with_text.ipynb <add_points_with_text.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
